# Kinetiq

./: .gitignore  Project Proposal - Kinetiq.pptx  api.py  pyproject.toml  render.yaml  requirements.txt  server.py
.claude/: settings.local.json
FitnessDashboard/: AccountDetailView.swift  AccountView.swift  ActiveWorkoutView.swift  ContentView.swift  ExerciseLibrary.swift  ExercisePickerView.swift  FitnessDashboardApp.swift  FoodSearchView.swift  ForgotPasswordView.swift  KinetiqService.swift  KinetiqView.swift  LoginView.swift  NutritionLogView.swift  NutritionStore.swift  OnboardingBasicsView.swift  OnboardingContainerView.swift  OnboardingProgramView.swift  OnboardingStartView.swift  ProgressView.swift  RestTimerSettingsView.swift  SignUpView.swift  StrengthView.swift  UserProfile.swift  (+8 more)
FitnessDashboard.xcodeproj/: project.pbxproj
core/python/: README.md  pyproject.toml  server.py
core/python/data/: set_logs.json
core/python/examples/: demo_cli.py  next_set_prompt.py  plot_progress.py  simulate_user.py
core/python/kinetiq_core/: __init__.py  engine.py  models.py  presets.py  progression.py  rpe_rules.py  storage.py
core/python/kinetiq_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/python/kinetiq_core/ml/: bandit.py  bayesian_rpe.py  calibration.py  embeddings.py  features.py  online_models.py  plateau.py  policy.py  readiness.py  rpe_reliability.py  state.py  user_clustering.py
core/python/tests/: test_engine.py  test_ml_advanced.py  test_ml_smoke.py  test_presets.py  test_progression.py  test_rep_delta.py  test_rpe_rules.py  test_units.py
(+14 files in other folders)
