[project]
name = "kinetiq-core"
version = "0.1.0"
description = "Kinetiq core training engine: RPE-based autoregulation with unit support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
